--- a/ejerciciosClase/busquedaArray.html
+++ b/ejerciciosClase/busquedaArray.html
@@ -1,14 +1,30 @@
 <html>
+
 <head>
     <title>Sumatorio de un array</title>
 </head>
 
 <body>
     <h1>Encuentra cuantas veces aparece un número en un array multidimensional</h1>
+
+    <br>
+    <label for="num">Numero a encontrar: </label>
+    <input id="num" name="num" type="text"><br>
+
     <script>
         let numeros = [1, [2, 3, 4], [8, 15, [5, 1]], 27];
+        let num = parseInt(document.getElementById('num').value);
 
-
+        function recorrerArray(numeros) {
+            for (let i = 0; i < numeros.length; i++) {
+                if (Array.isArray(numeros[i])) {
+                   
+                    recorrerArray(numeros[i]);
+                } else {
+                    console.log(numeros [i]);
+                }
+            }
+        }
     </script>
 </body>
 
