--- a/ejerciciosClase/minevancic.html
+++ b/ejerciciosClase/minevancic.html
@@ -23,27 +23,25 @@
         function color(minas) {
             for (let i = 0; i < minas.length; i++) {
                 for (let j = 0; j < minas[i].length; j++) {
-                    for (let k = 0; k < 4; k++) {
-
-                        if (minas[i][j] == 1) {
-                            if (i - 1 >= 0 && minas[i - 1][j] != 1) {
-                                minas[i - 1][j] = 2;
-                            }
-                            if (i + 1 < minas.length && minas[i + 1][j] != 1) {
-                                minas[i + 1][j] = 2;
-                            }
-                            if (j + 1 < minas.length && minas[i][j + 1] != 1) {
-                                minas[i][j + 1] = 2;
-                            }
-                            if (j - 1 >= 0 && minas[i][j - 1] != 1) {
-                                minas[i][j - 1] = 2;
-                            }
+                    if (minas[i][j] == 1) {
+                        if (i - 1 >= 0 && minas[i - 1][j] < 1) {
+                            minas[i - 1][j] = 2;
+                        }
+                        if (i + 1 < minas.length && minas[i + 1][j] != 1) {
+                            minas[i + 1][j] = 2;
+                        }
+                        if (j + 1 < minas.length && minas[i][j + 1] != 1) {
+                            minas[i][j + 1] = 2;
+                        }
+                        if (j - 1 >= 0 && minas[i][j - 1] != 1) {
+                            minas[i][j - 1] = 2;
                         }
                     }
                 }
             }
-            console.log(minas);
         }
+        console.log(minas);
+        
     </script>
 </body>
 
